// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should render component with disabled state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #B0B5BD;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 > * {
  margin-top: 16px;
}

.c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 16px;
}

fieldset[data-dimension='s'] .c3 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6::-ms-check {
  display: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:checked + .c7 {
  background-color: #0062FF;
  border: none;
}

.c6:not(:checked) + .c7 > * {
  display: none;
}

.c6:hover:not(:disabled)::after,.c6:focus:not(:disabled) + .c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:disabled + .c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:checked:disabled + .c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled + .c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c5 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c2 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #B0B5BD;
  cursor: default;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <div
        class="c0"
        disabled=""
      >
        <label
          class="c1 c2"
          data-field-id="2gcczd85sct0ppo3ddz3p6k"
          disabled=""
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              disabled=""
              id="2gcczd85sct0ppo3ddz3p6k"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Москва
        </label>
        <label
          class="c1 c2"
          data-field-id="2hp4q1bar9l0tx7bt6lsfv"
          disabled=""
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              disabled=""
              id="2hp4q1bar9l0tx7bt6lsfv"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Воронеж
        </label>
        <label
          class="c1 c2"
          data-field-id="2hqvst91b120dhup8e839de"
          disabled=""
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              disabled=""
              id="2hqvst91b120dhup8e839de"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Самара
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #B0B5BD;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 > * {
  margin-top: 16px;
}

.c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 16px;
}

fieldset[data-dimension='s'] .c3 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6::-ms-check {
  display: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:checked + .c7 {
  background-color: #0062FF;
  border: none;
}

.c6:not(:checked) + .c7 > * {
  display: none;
}

.c6:hover:not(:disabled)::after,.c6:focus:not(:disabled) + .c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:disabled + .c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:checked:disabled + .c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled + .c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c5 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c2 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #B0B5BD;
  cursor: default;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <div
      class="c0"
      disabled=""
    >
      <label
        class="c1 c2"
        data-field-id="2gcczd85sct0ppo3ddz3p6k"
        disabled=""
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            disabled=""
            id="2gcczd85sct0ppo3ddz3p6k"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Москва
      </label>
      <label
        class="c1 c2"
        data-field-id="2hp4q1bar9l0tx7bt6lsfv"
        disabled=""
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            disabled=""
            id="2hp4q1bar9l0tx7bt6lsfv"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Воронеж
      </label>
      <label
        class="c1 c2"
        data-field-id="2hqvst91b120dhup8e839de"
        disabled=""
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            disabled=""
            id="2hqvst91b120dhup8e839de"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Самара
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup should render component with label 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 > * {
  margin-top: 16px;
}

.c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 16px;
}

fieldset[data-dimension='s'] .c3 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6::-ms-check {
  display: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:checked + .c7 {
  background-color: #0062FF;
  border: none;
}

.c6:not(:checked) + .c7 > * {
  display: none;
}

.c6:hover:not(:disabled)::after,.c6:focus:not(:disabled) + .c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:disabled + .c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:checked:disabled + .c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled + .c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c5 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c2 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <div
        class="c0"
      >
        Выберите города
        <label
          class="c1 c2"
          data-field-id="2cu2tmt5zkl0ikh2arlsdyi"
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              id="2cu2tmt5zkl0ikh2arlsdyi"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Москва
        </label>
        <label
          class="c1 c2"
          data-field-id="2duh27v4nmp0s36ci1nhep"
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              id="2duh27v4nmp0s36ci1nhep"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Воронеж
        </label>
        <label
          class="c1 c2"
          data-field-id="2dyjilznq2o059jvr5i14le"
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              id="2dyjilznq2o059jvr5i14le"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Самара
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 > * {
  margin-top: 16px;
}

.c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 16px;
}

fieldset[data-dimension='s'] .c3 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6::-ms-check {
  display: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:checked + .c7 {
  background-color: #0062FF;
  border: none;
}

.c6:not(:checked) + .c7 > * {
  display: none;
}

.c6:hover:not(:disabled)::after,.c6:focus:not(:disabled) + .c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:disabled + .c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:checked:disabled + .c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled + .c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c5 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c2 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <div
      class="c0"
    >
      Выберите города
      <label
        class="c1 c2"
        data-field-id="2cu2tmt5zkl0ikh2arlsdyi"
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            id="2cu2tmt5zkl0ikh2arlsdyi"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Москва
      </label>
      <label
        class="c1 c2"
        data-field-id="2duh27v4nmp0s36ci1nhep"
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            id="2duh27v4nmp0s36ci1nhep"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Воронеж
      </label>
      <label
        class="c1 c2"
        data-field-id="2dyjilznq2o059jvr5i14le"
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            id="2dyjilznq2o059jvr5i14le"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Самара
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup should render component with small dimension 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 > * {
  margin-top: 12px;
}

.c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c3 {
  width: 16px;
}

fieldset[data-dimension='s'] .c3 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6::-ms-check {
  display: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:checked + .c7 {
  background-color: #0062FF;
  border: none;
}

.c6:not(:checked) + .c7 > * {
  display: none;
}

.c6:hover:not(:disabled)::after,.c6:focus:not(:disabled) + .c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:disabled + .c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:checked:disabled + .c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled + .c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c5 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c2 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <div
        class="c0"
      >
        <label
          class="c1 c2"
          data-field-id="2f1jqhh07jq0fezncuqibit"
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              id="2f1jqhh07jq0fezncuqibit"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Москва
        </label>
        <label
          class="c1 c2"
          data-field-id="2fi94h0crub0itl3luqnme"
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              id="2fi94h0crub0itl3luqnme"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Воронеж
        </label>
        <label
          class="c1 c2"
          data-field-id="2fplntis5qp0aglz117h9qv"
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              id="2fplntis5qp0aglz117h9qv"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Самара
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 > * {
  margin-top: 12px;
}

.c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c3 {
  width: 16px;
}

fieldset[data-dimension='s'] .c3 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6::-ms-check {
  display: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:checked + .c7 {
  background-color: #0062FF;
  border: none;
}

.c6:not(:checked) + .c7 > * {
  display: none;
}

.c6:hover:not(:disabled)::after,.c6:focus:not(:disabled) + .c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:disabled + .c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:checked:disabled + .c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled + .c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c5 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c2 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <div
      class="c0"
    >
      <label
        class="c1 c2"
        data-field-id="2f1jqhh07jq0fezncuqibit"
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            id="2f1jqhh07jq0fezncuqibit"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Москва
      </label>
      <label
        class="c1 c2"
        data-field-id="2fi94h0crub0itl3luqnme"
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            id="2fi94h0crub0itl3luqnme"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Воронеж
      </label>
      <label
        class="c1 c2"
        data-field-id="2fplntis5qp0aglz117h9qv"
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            id="2fplntis5qp0aglz117h9qv"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Самара
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup should render components 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 > * {
  margin-top: 16px;
}

.c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 16px;
}

fieldset[data-dimension='s'] .c3 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6::-ms-check {
  display: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:checked + .c7 {
  background-color: #0062FF;
  border: none;
}

.c6:not(:checked) + .c7 > * {
  display: none;
}

.c6:hover:not(:disabled)::after,.c6:focus:not(:disabled) + .c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:disabled + .c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:checked:disabled + .c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled + .c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c5 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c2 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <div
        class="c0"
      >
        <label
          class="c1 c2"
          data-field-id="28cbxvqy42h07rfm0pzozsa"
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              id="28cbxvqy42h07rfm0pzozsa"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Москва
        </label>
        <label
          class="c1 c2"
          data-field-id="2ajah2dk1j3072ez9mp1c17"
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              id="2ajah2dk1j3072ez9mp1c17"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Воронеж
        </label>
        <label
          class="c1 c2"
          data-field-id="2ankbk3k8bx0fglrhi9739"
        >
          <div
            class="c3 c4 c5"
          >
            <input
              class="c6"
              id="2ankbk3k8bx0fglrhi9739"
              type="checkbox"
            />
            <div
              class="c7 c8"
            >
              <div
                aria-hidden="true"
                class="c9"
                focusable="false"
              />
            </div>
          </div>
          Самара
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 > * {
  margin-top: 16px;
}

.c9 {
  pointer-events: none;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 16px;
}

fieldset[data-dimension='s'] .c3 {
  height: 16px;
}

.c8 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c8 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c6::-ms-check {
  display: none;
}

.c6:disabled {
  pointer-events: none;
}

.c6:checked + .c7 {
  background-color: #0062FF;
  border: none;
}

.c6:not(:checked) + .c7 > * {
  display: none;
}

.c6:hover:not(:disabled)::after,.c6:focus:not(:disabled) + .c6:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c6:disabled + .c7 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c6:checked:disabled + .c7 {
  background-color: #A7C7FF;
  border: none;
}

.c6:checked:disabled + .c7 *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c5 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c2 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <div
      class="c0"
    >
      <label
        class="c1 c2"
        data-field-id="28cbxvqy42h07rfm0pzozsa"
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            id="28cbxvqy42h07rfm0pzozsa"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Москва
      </label>
      <label
        class="c1 c2"
        data-field-id="2ajah2dk1j3072ez9mp1c17"
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            id="2ajah2dk1j3072ez9mp1c17"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Воронеж
      </label>
      <label
        class="c1 c2"
        data-field-id="2ankbk3k8bx0fglrhi9739"
      >
        <div
          class="c3 c4 c5"
        >
          <input
            class="c6"
            id="2ankbk3k8bx0fglrhi9739"
            type="checkbox"
          />
          <div
            class="c7 c8"
          >
            <div
              aria-hidden="true"
              class="c9"
              focusable="false"
            />
          </div>
        </div>
        Самара
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
